--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,12 @@
+org: vjcspy
+app: slack
 service: chiaki-slack
 
 custom:
   # Our stage is based on what is passed in when running serverless
   # commands. Or falls back to what we have set in the provider section.
   stage: ${opt:stage, 'offline'}
-  region: ${opt:region, 'ap-northeast-1'}
+  region: ${opt:region, 'ap-southeast-1'}
   bundle:
     linting: false
     excludeFiles: "**/*.test.ts"
@@ -14,6 +16,7 @@ custom:
 
 provider:
   name: aws
+  region: ap-southeast-1
   runtime: nodejs14.x
   memorySize: 512
   timeout: 10
