--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "remove-prod": "cross-env NODE_ENV=production sls remove --stage prod",
     "clean": "rimraf dist .webpack .serverless",
     "lint": "eslint --ext .js,.ts .",
+    "lint:fix": "eslint --fix  --ext .js,.ts .",
     "build-types": "tsc --noEmit --pretty",
     "test": "jest",
     "prepare": "husky install",
     "deploy": "npm run deploy-prod"
   },
   "dependencies": {
+    "@slack/bolt": "^3.12.1",
     "express": "^4.18.1",
     "helmet": "^5.1.1",
+    "lodash": "^4.17.21",
     "serverless-http": "^3.0.2"
   },
   "devDependencies": {
